--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 This is a readme file for Atlas Open Source Development Team's AtlasUI project.
 
 What is AtlasUI?
-The AtlasUI (Atlas User Interface) is a transitional software for Windows users to familiarize themselves with common Linux environments.
+The AtlasUI is a Web Framework based in HTML5, PHP and CSS3 with the goal of making web development easier and more effecient while not compromises the look and feel of a high-end website.
 
-Licensed under FreeSoft Licensing: http://freesoft.aosdt.org
+Licensed under FreeSoft Licensing v1.5 Revision 2.
 
 Developed by the Atlas Open Source Development Team:
-http://aosdt.org
+http://globalcommunityportal.com | http://facebook.com/groups/aosdt
